<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/preference_category_cache">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="@string/preference_key_save_news"
            app:summary="@string/preference_summary_save_news"
            app:title="@string/preference_title_save_news"/>

        <Preference
            app:key="@string/preference_key_delete_news"
            app:summary="@string/preference_summary_delete_news"
            app:title="@string/preference_title_delete_news"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preference_category_news_category">

        <ListPreference
            android:defaultValue="general"
            android:dialogTitle="News Category"
            android:entries="@array/news_categories"
            android:entryValues="@array/news_categories_values"
            android:summary="@string/preference_summary_news_category"
            android:title="@string/preference_title_news_category"
            app:key="@string/preference_key_news_category"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>